# Lanuk-Atlas

./: .env  .env.simplex4learning  .gitignore  README.md  deploy-advanced.sh  deploy.sh  docker-compose.yml  fill-database.sh
Lanuk-Backend/: .dockerignore  Dockerfile  README.md  main_api.py  pyproject.toml  requirements.txt
Lanuk-Backend/src/: eval.py
Lanuk-Backend/src/Websearch/: __init__.py  models.py  search.py  templates_s.py
Lanuk-Backend/src/db/: __init__.py  connection.py
Lanuk-Backend/src/download/: __init__.py  graphics.py
Lanuk-Backend/src/evaluation/: __init__.py
Lanuk-Backend/src/evaluation/Evaluation_G_Eval/: eval_rubric.json  report_eval.py  template_eval.py
Lanuk-Backend/src/evaluation/Evaluation_G_Eval/2023-Sommer-CoT/: Flüssigkeit_-_Lesbarkeit,_Verständlichkeit,_Lesefluss.txt  Relevanz_und_Fokus_der_Themenfelder.txt  Struktur_und_Organisation.txt  _Genauigkeit_der_Daten.txt
Lanuk-Backend/src/evaluation/Evaluation_G_Eval/2023-Sommer-few_shot/: Flüssigkeit_-_Lesbarkeit,_Verständlichkeit,_Lesefluss.txt  Relevanz_und_Fokus_der_Themenfelder.txt  Struktur_und_Organisation.txt  _Genauigkeit_der_Daten.txt
Lanuk-Backend/src/heading/: __init__.py  heading.py  template.py
Lanuk-Backend/src/llm_reporters/: __init__.py  reporters.py
Lanuk-Backend/src/pdf_generator/: __init__.py  pdf_generator_api.py
Lanuk-Backend/src/retrieval_functions/: __init__.py  base_retrieval_functions.py  base_retrieval_functions_ad.py  models.py  retrieval_functions.py  valuation.py
Lanuk-Backend/src/settings/: __init__.py  logger.py  settings.py
Lanuk-Backend/src/templates/: __init__.py  template_agents_adv.py  template_data.py  template_important.py  template_struktur.py  template_val_adv.py  template_val_std.py  template_val_tasks.py  templates_adv.py  templates_first_it.py  templates_std.py
Lanuk-Backend/src/time_series/: __init__.py  time_series.py
Lanuk-Backend/src/utils/: __init__.py  utils.py
Lanuk-DB/: README.md  main.py  (+1 more)
Lanuk-DB/src/WeatherSpider/: Procfile  pyproject.toml
Lanuk-DB/src/WeatherSpider/scraper_master/: config.py  headers.py  main.py
(+79 files in other folders)
